Closed Bug 607251 Opened 15 years ago Closed 14 years ago

Aero broken when switch Basic/Aero Theme while minimize/un-minimize window

Categories

(Core :: Widget: Win32, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla10

People

(Reporter: bugmozz, Assigned: bbondy)

References

Details

(Keywords: regression)

Attachments

(5 files)

Attached image screenshot
[STR] 1) start Minefield, with (Windows 7) Basic Theme 2) minimize 3) switch to Aero Theme 4) un-minimize 5) Aero broken (see screenshot)
Component: Theme → General
Product: Firefox → Core
QA Contact: theme → general
Component: General → Widget: Win32
QA Contact: general → win32
A resize or even just a simple mouse over will trigger a full repaint. I see a similar effect with the menu bar enabled, although for some reason as soon as the window restores the paint triggers.
No longer blocks: 593950
This appears to be fixed in the latest nightly. Pal-moz, can you confirm?
(In reply to comment #2) > This appears to be fixed in the latest nightly. Pal-moz, can you confirm? seems to be partially fixed. but still broken for a while, about 1/5 - 1/4 seconds I think this will be completely fixed by backout of bug 593950 . (this happened after/around this bug checkin)
(In reply to comment #4) > Created attachment 499819 [details] > Screenshot of the Firefox bar going black Sorry I should've put this in the attachement comments, new to Bugzilla. I'm on Firefox 4 Beta 8 and having the same problem. Here's my User Agent string: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8) Gecko/20100101 Firefox/4.0b8
This is still happening on the latest nightly but far less. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b11pre) Gecko/20110202 Firefox/4.0b11pre
Reproducible on: Mozilla/5.0 (Windows NT 6.1; rv:5.0a2) Gecko/20110417 Firefox/5.0a2 On the above build, the menu bar is not black anymore but transparent. But I suppose it address the same issue. Attached some screenshots. Also, I am considering duping bug 621857 after this one, since has not yet been confirmed and was logged later
Added this to show the bug is still hanging around in v6 of the browser.
Assignee: nobody → netzen
The main thing that fixes the problem is passing in erase background when invalidating. It is done synchronously to fix the problem sooner than later as it's a very infrequent message. I do this in both WM_DWMCOMPOSITIONCHANGED and WM_THEMECHANGED. I would have changed the other Invalidate overload as well to have matching parameters, but that overload is part of nsIWidget so I didn't change it. I'm using ::RedrawWindow instead of ::Invalidate now but as far as I can tell from MSDN the default functionality stays the same.
Attachment #559019 - Flags: review?(jmathies)
Review ping
(In reply to Brian R. Bondy [:bbondy] from comment #12) > Review ping Unfortunatly I do not know how to review your changes so I am hoping someone else tests it for you, thanks for looking at the issue.
Comment on attachment 559019 [details] [diff] [review] Patch for fixing minimized window and theme change sorry for the delay. I like the new options, might come in handy.
Attachment #559019 - Flags: review?(jmathies) → review+
Thanks for the review :) Rebased and pushed to try: https://hg.mozilla.org/try/rev/078ea1948daf
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
Verified as fixed on: Mozilla/5.0 (Windows NT 6.1; rv:10.0a1) Gecko/20111009 Firefox/10.0a1 This issue doesn't reproduce anymore using the steps in the bug description.
Status: RESOLVED → VERIFIED
Having this bug on Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20121128 Thunderbird/19.0a2
(In reply to Petja Touru from comment #20) > Having this bug on > Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20121128 > Thunderbird/19.0a2 file a new bug.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: