Bug 607251 - Aero broken with Basic/Aero theme and minimize/un-minimize. r=jimm